Feat:添加动态规划

--- a/动态规划.md
+++ b/动态规划.md
@@ -869,7 +869,7 @@ print(lengthOfLIS([7, 7, 7, 7, 7, 7, 7]))  # 输出: 1
 
 问总共有多少条不同的路径？
 
-![不同路径示意图](./62.png)
+![不同路径示意图](./imgs/62.png)
 
 **测试用例：**
 
@@ -955,7 +955,7 @@ print(uniquePaths(3, 2))  # 输出: 3
 
 **说明：**每次只能向下或者向右移动一步。
 
-![最小路径和示意图](./64.png)
+![最小路径和示意图](./imgs/64.png)
 
 **测试用例：**
 
@@ -1613,7 +1613,7 @@ print(rob(root1))  # 输出: 7
 
 给你一个整数 n，求恰由 n 个节点组成且节点值从 1 到 n 互不相同的二叉搜索树有多少种？返回满足题意的二叉搜索树的种数。
 
-![不同的二叉搜索树示意图](./96.png)
+![不同的二叉搜索树示意图](./imgs/96.png)
 
 **测试用例：**
 
