--- a/哈希表.md
+++ b/哈希表.md
@@ -251,7 +251,8 @@ def groupAnagrams(strs):
     空间复杂度：O(n * k)
     """
     from collections import defaultdict
-    
+    #在访问不存在的键时，自动创建一个默认值，而不是抛出 KeyError 异常
+
     # 使用defaultdict自动创建空列表
     groups = defaultdict(list)
     
