--- a/普通数组.md
+++ b/普通数组.md
@@ -200,7 +200,7 @@ def merge(intervals):
     if not intervals:
         return []
     
-    # 按起点排序
+    # 按起点就地排序
     intervals.sort(key=lambda x: x[0])
     
     merged = [intervals[0]]
