feat:更新了一些题目

--- a/链表.md
+++ b/链表.md
@@ -133,7 +133,9 @@ def delete_after(node):
 
 注意，函数返回结果后，链表必须 **保持其原始结构**。
 
-![相交链表示意图](./imgs/160.png)
+![相交链表示意图](./imgs/160-1.png)
+
+![相交链表示意图](./imgs/160-2.png)
 
 **测试用例：**
 
@@ -448,7 +450,7 @@ def isPalindrome(head):
     if not head or not head.next:
         return True
 
-    # 快慢指针找到中点
+    # 快慢指针找到中点，slow指针走一步，fast指针走两步，当fast指针走不动时slow指针就是中点
     slow, fast = head, head
     while fast.next and fast.next.next:
         slow = slow.next
@@ -763,6 +765,7 @@ def detectCycle(head):
 
     # 第二阶段：找环的入口
     # 将slow重置到head，fast保持在相遇点
+    # 两个指针同时前进，相遇点即为环入口
     slow = head
     while slow != fast:
         slow = slow.next
